# tams

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  pom.xml
.cursor/rules/: docker.mdc  documentation-architecture-notebook.mdc  documentation-srs.mdc  documentation-standards.mdc  documentation-use-case.mdc  documentation-vision.mdc  general.mdc  java-spring-boot.mdc  kubernetes.mdc  python-fastapi.mdc  react-frontend.mdc  todo-tracking.mdc  ui-design.mdc
docs/: TAMS Vision Document.docx  architecture.md  category-course-cohort-bounds.md  e2e-test.sh  graduation-rules-architecture.md  graduation-rules-refactor.md  graduation-rules-v2-architecture.md  graduation-rules-v2-refactor.md  https-migration-guide.md  parser-service-explanation  production-deployment.md  remaining-tasks.md  todo.md
docs/official/: system-requirements.md  (+3 more)
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
infrastructure/: docker-compose.https.yml  docker-compose.infra.yml  docker-compose.yml
services/parser-service/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
services/parser-service/src/: __init__.py  config.py  consumer.py  main.py  producer.py
services/parser-service/src/parser/: __init__.py  grades.py  models.py  pdf_parser.py
services/parser-service/src/pii/: __init__.py  pii_masker.py
services/parser-service/tests/: conftest.py  test_grades.py  test_integration_kafka.py  test_main.py  test_parser_invariants.py  test_pdf_parser.py  test_pii_masker.py  test_pipeline.py
(+388 files in other folders)
